[Bugfix] Fix general layout bugs

--- a/src/styles/4-elements/_page.scss
+++ b/src/styles/4-elements/_page.scss
@@ -13,6 +13,7 @@ body {
 html {
   font-size: 62.5%;
   line-height: 1.5;
+  overflow-x: hidden;
 }
 
 body {
