--- a/src/styles/6-components/_element.paymethod.scss
+++ b/src/styles/6-components/_element.paymethod.scss
@@ -16,5 +16,5 @@ $paymethod-icon__boradius: $global_border-radius * 2;
 }
 
 .c-paymethod-icon__image {
-  max-width: 100%;
+  max-width: 3rem;
 }
